the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-storage
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
      - name: todo-app
        image: todo-app
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "20m"
            memory: "50Mi"
          limits:
            cpu: "200m"
            memory: "100Mi"
        volumeMounts:
          - name: image-storage
            mountPath: /app/images
